# xgc2-camera-core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.xgc2/: product.yml
.xgc2/scripts/: build_deb.sh  check_cpp_quality.sh  check_manifest_contract.py  check_package_compliance.sh  smoke_test_installed.sh  xgc2_artifact_manifest.py
cmake/: xgc2_cameraConfig.cmake.in
include/xgc2/camera/: camera.hpp  version.hpp
pkgconfig/: xgc2-camera.pc.in
src/: camera.cpp  internal.hpp  synthetic_camera.cpp  v4l2_camera.cpp
test/: camera_test.cpp
tools/: xgc2-camera-inspect.cpp
